* upper/lowercase English nit fix for the last patch as suggested by TimToady
git-svn-id: http://svn.pugscode.org/pugs@23308 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -401,8 +401,8 @@ You may cast C<Arguments> to other types with a prefix sigil operator:
     %$args;         # same as '$args as Hash"   or "Hash($args)"
     &$args;         # same as '$args as Code"   or "Code($args)"
 
-When cast into an array, you can access all the positional arguments; Into a
-hash, all named arguments; Into a scalar, the invocant; Into code, its slurpy
+When cast into an array, you can access all the positional arguments; into a
+hash, all named arguments; into a scalar, the invocant; into code, its slurpy
 nameless block.
 
 All prefix sigil operators accept one positional argument, evaluated in
