* S09: Leo pointed out the paragraph on autovivifiction   is still mentioning references.  Replace it with modern   wording (surface semantics stays unchanged)
git-svn-id: http://svn.pugscode.org/pugs@23312 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S09.pod
+++ b/doc/trunk/design/syn/S09.pod
@@ -696,9 +696,10 @@ But these ones I<do> autovivify:
     my $val := $hash{foo}{bar};
 
     my @array;
-    my $ref = \$array[0][0];
+    my $ref = \$array[0][0]; # $ref is an Arguments object - see S02
 
     my %hash;
     $hash{foo}{bar} = "foo"; # duh
 
-This rule applies to dereferencing arrays, hashes, and scalar references.
+This rule applies to C<Array>, C<Hash>, and C<Scalar> container objects.
+
